tests/failing/function-already-defined.c
int f1() {
}
int f1() {
}